[gd_scene load_steps=4 format=3 uid="uid://byfysvjav4s0b"]

[ext_resource type="Script" path="res://DummyTest/yet_coin.gd" id="1_vk6t2"]
[ext_resource type="PackedScene" uid="uid://c3iyvfrl7ep53" path="res://modules/Meshening/kay_kit_coin.tscn" id="2_mc2t8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6uglk"]

[node name="YetCoin" type="Area3D" groups=["coin"]]
script = ExtResource("1_vk6t2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_6uglk")

[node name="Shapes" type="Node3D" parent="."]

[node name="KayKitCoin" parent="Shapes" instance=ExtResource("2_mc2t8")]

[node name="CenterSpeaker" type="AudioStreamPlayer3D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
